--- a/host/pannel/desktop_stream.html
+++ b/host/pannel/desktop_stream.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <title>Desktop - Streaming</title>
+        <title>Streaming Desktop - DUCKSPLOIT</title>
     </head>
-    <body style="background-color:black;">
-        <h1 style="color:white">Video Stream</h1>
+    <body style="background-color:black;" position="center">
+        <h1 style="color:white">DuckSploit - Desktop Stream</h1>
 		
 		<img id="img" src="temp/last.jpg" alt='1' width="600" height="300">
 <script> 
